# ctc-forced-aligner-fixed

./: .gitignore  README.md  pyproject.toml
ctc_forced_aligner/: align.py  alignment_utils.py
